# fastapi-graphql

./: .gitlab-ci.yml  CONTRIBUTING.md  README.md  cookiecutter.json
{{cookiecutter.project_slug}}/backend/app/: cli.py  pyproject.toml
{{cookiecutter.project_slug}}/backend/app/alembic/: env.py
{{cookiecutter.project_slug}}/backend/app/app/: main.py  tests_pre_start.py
{{cookiecutter.project_slug}}/backend/app/app/api/: deps.py
{{cookiecutter.project_slug}}/backend/app/app/core/: config.py  security.py
{{cookiecutter.project_slug}}/backend/app/app/crud/: __init__.py  crud_item.py  crud_user.py
{{cookiecutter.project_slug}}/backend/app/app/database/: base.py  init_db.py
{{cookiecutter.project_slug}}/backend/app/app/database/crud/: crud_item.py  crud_user.py
{{cookiecutter.project_slug}}/backend/app/app/database/models/: user.py
{{cookiecutter.project_slug}}/backend/app/app/db/: init_db.py
{{cookiecutter.project_slug}}/backend/app/app/graphql/: auth.graphql  healthcheck.graphql  schema.py  utils.py
{{cookiecutter.project_slug}}/backend/app/app/graphql-schemas/: healthcheck.graphql
{{cookiecutter.project_slug}}/backend/app/app/graphql/directives/: __init__.py  directives.graphql  permissions.py
{{cookiecutter.project_slug}}/backend/app/app/models/: item.py
{{cookiecutter.project_slug}}/backend/app/app/tests/: .env.tests  conftest.py
{{cookiecutter.project_slug}}/backend/app/app/tests/crud/: test_item.py  test_user.py
{{cookiecutter.project_slug}}/backend/app/app/tests/utils/: item.py  (+2 more)
{{cookiecutter.project_slug}}/backend/app/scripts/: test.sh
(+21 files in other folders)
